// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> Should correctly render recipe 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer nowrap"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    ☠️
  </span>
  <span>
    Test Recipe
  </span>
  <span>
    Test Category
  </span>
</li>
`;

exports[`<Header /> Should not break if no recipe passed 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer nowrap"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    ☠️
  </span>
  <span />
  <span />
</li>
`;

exports[`<Header /> Should render favorite state 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer nowrap"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    😻
  </span>
  <span>
    Test Recipe
  </span>
  <span>
    Test Category
  </span>
</li>
`;

exports[`<RecipeList /> Should not break when no recipe is passed 1`] = `
<ul
  className="list-reset"
/>
`;

exports[`<RecipeList /> Should render correctly 1`] = `
<ul
  className="list-reset"
/>
`;

exports[`<RecipeList /> Should render favorite state correctly 1`] = `
<ul
  className="list-reset"
>
  <li
    className="py2 border-bottom border-bottom-dashed pointer nowrap"
    onClick={[Function]}
  >
    <span
      aria-label="favorite"
      className="mr1"
      onClick={[Function]}
      role="img"
    >
      😻
    </span>
    <span>
      Test Recipe
    </span>
    <span>
      Test Category
    </span>
  </li>
  <li
    className="py2 border-bottom border-bottom-dashed pointer nowrap"
    onClick={[Function]}
  >
    <span
      aria-label="favorite"
      className="mr1"
      onClick={[Function]}
      role="img"
    >
      😻
    </span>
    <span>
      Test Recipe 2
    </span>
    <span>
      Test Category 2
    </span>
  </li>
</ul>
`;
